===================== RELEASE NOTES 3.27 =====================
* FiYir removed the obsolete Bayesian Average setting
* FiYir ensured that fields are blank (instead of showing 0.0 or NA) in the main window, taken cards window, and card popup when 17Lands data is unavailable

===================== RELEASE NOTES 3.27 =====================
* FiYir addressed issue around sealed deck pools

===================== RELEASE NOTES 3.26 =====================
* FiYir Fixed issue [Bug]: OTJ ArenaDirect is detected as MH3 ArenaDirect and no picks are detected #42

===================== RELEASE NOTES 3.25 =====================
* FiYir released feature: Dataset Pre-Download Check #38

===================== RELEASE NOTES 3.24 =====================
* FiYir released feature: Card Popup Archetype Stats #32: Add archetype stats to card popup window

===================== RELEASE NOTES 3.23 =====================
* FiYir Fixed issue [Bug]: Incorrect Arena Cube Start Date #30: The app now sets the correct start date for the Arena Cube.
* FiYir Fixed issue [Bug]: App Uses Obsolete Datasets #29: Old datasets no longer block new datasets.

===================== RELEASE NOTES 3.22 =====================
* Update Arena Direct event

===================== RELEASE NOTES 3.21 =====================
* FiYir added support for the Arena Open, Qualifier, and Arena Direct events

===================== RELEASE NOTES 3.20 =====================
* Update README with more information on how P1P1 solution is implemented
* Add P1P1 OCR setting to allow users to disable sending information to third parties
* Add Save P1P1 Screenshots to allow users to see what data is being sent to third parties

===================== RELEASE NOTES 3.19 =====================
* FiYir & unrealities implemented a fix for P1P1 pack cards not being displayed. If you press the Refresh button, a screenshot will be sent to a third-party tool to determine the cards in the pack.