@@ -159,7 +159,7 @@ TIER_FILE_PREFIX = "Tier_"
 
 DRAFT_DETECTION_CATCH_ALL = ["Draft", "draft"]
 
-DRAFT_START_STRING_EVENT_JOIN = "[UnityCrossThreadLogger]==> Event_Join "
+DRAFT_START_STRING_EVENT_JOIN = "[UnityCrossThreadLogger]==> EventJoin "
 DRAFT_START_STRING_BOT_DRAFT = "[UnityCrossThreadLogger]==> BotDraft_DraftStatus "
 
 DRAFT_START_STRINGS = [DRAFT_START_STRING_EVENT_JOIN,
